--- a/react-demo-app/src/Components/Hooks/UseRef/UseRef.css
+++ b/react-demo-app/src/Components/Hooks/UseRef/UseRef.css
@@ -2,6 +2,14 @@
     position: relative;
     text-align: center;
     margin-top: 2rem;
+    background-color: #e8f9e1;
+    border: 1px solid #a5d6a7;
+    border-radius: 8px;
+    padding: 20px;
+  }
+
+  h2{
+    margin: 0;
   }
   
   button {
