--- a/react-demo-app/src/Components/Navbar/Navbar.css
+++ b/react-demo-app/src/Components/Navbar/Navbar.css
@@ -12,7 +12,7 @@
     padding: 0;
   }
   
-  .nav-links li a {
+  .nav-links li a button {
     text-decoration: none;
     color: #1976d2;
     font-weight: 500;
@@ -20,5 +20,9 @@
   
   .nav-links li a:hover {
     text-decoration: underline;
+  }
+
+  .nav-links li button{
+    margin-top: 0;
   }
   
